# Spree

./: .env.example  .gitignore  AUDIT.md  AUTH_AUDIT_2026-07-09.md  CHAT_AUDIT_2026-07-07.md  EMAIL_FLOW_ASSESSMENT_2026-07-10.md  FIXLOG.md  FULL_AUDIT_2026-07-05.md  NOTIFICATIONS.md  README.md  SECURITY.md  SPEC_GAPS.md  auth.config.ts  auth.ts  docker-compose.yml  eslint.config.mjs  netlify.toml  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tsconfig.json  vercel.json  vitest.config.ts
backend/: .env.example  .vercelignore  PAYMENT_FIXES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.db  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: common_passwords.py  config.py  logging.py  pricing.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: auth.py  cart.py  catalog.py  marketplace.py  notification.py  order.py  webauthn.py
backend/app/scripts/: fix_heic_refs.py
backend/app/seeds/: catalog.py
backend/app/services/: audit.py  auth.py  cart.py  catalog.py  dev_notifier.py  encryption.py  face_match_adapter.py  ledger.py  logistics_adapter.py  marketplace.py  nia_adapter.py  notifications.py  onboarding.py  orders.py  paystack.py  push.py  uploads.py  verification_session.py  webauthn_svc.py
backend/scripts/: backfill_delivery_dates.py  rls_policies.sql  setup_stream.py
backend/tests/: conftest.py  test_api.py  test_email_flow.py  test_identity.py  test_pricing.py  test_webauthn.py
(+283 files in other folders)
