[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spree-backend"
version = "0.1.0"
description = "FastAPI backend for the Spree storefront"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "psycopg[binary]>=3.2.10,<4.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
app = "server:app"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.2,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
